sample/nginx_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whitelist
  annotations:
    kubernetes.io/ingress.class: "nginx-wan"

spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
